--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- ========================================= -->
     <!-- ⭐ NUEVO: MOTOR DE REGLAS ⭐ -->
     <!-- ========================================= -->
-    <script src="rules-engine.js"></script>
+   <script src="core/rules-engine.js"></script>
     
     <!-- ========================================= -->
     <!-- CARACTERÍSTICAS (FEATURES) -->
